tests/typechecker/should_pass/no_blank_line_instance_of_included_module_with_one_argument.csp
include "module_with_one_argument.csp"
instance im = m1(1)
print im::y
