tests/typechecker/should_fail/dot_operator_pattern_matching_4.csp
channel b : Int

fst(x.y) = x
snd(x.y) = y

testPatternMatch3 = snd(b.1) == b
